--- a/css/yupi.css
+++ b/css/yupi.css
@@ -1,5 +1,5 @@
 header{
-    background-image: url("../imgs/stray.jpg");
+    background-image: url("imgs/stray.jpg");
     background-size: cover;
     background-position: center;
 }
